@@ -110,3 +110,5 @@ v 1.9:
 	- Update to new Bukkit Event system.
 	- Update GroupManagerBridge for new event system.
 	- Fixed a random null error upon a player portaling.
+	- Fixed infinite loop error on player join.
+	- Optimized code to only update the player logging in instead of all players online.
